# verifywise-mcp

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  LICENSE  RESEARCH.md  RUNNING.md  SKILLS.md  TASKS.md  docker-compose.test.yml  pyproject.toml
.claude/hooks/: session-start.sh
demos/: verification.md  verifywise-startup.md
scripts/: seed-verifywise.js  start-verifywise-local.sh  start-verifywise.sh  stop-verifywise-local.sh  stop-verifywise.sh  verify-verifywise.sh  wait-for-verifywise.sh
src/verifywise_mcp/: auth.py  client.py  config.py  models.py  server.py
src/verifywise_mcp/tools/: projects.py  risks.py
tests/e2e/: test-rodney.html
tests/unit/: test_auth.py  test_client.py  test_config.py  test_models.py  test_server.py
tests/unit/tools/: test_projects.py  test_risks.py
