[project]
name = "verifywise-mcp"
version = "0.1.0"
description = "MCP server for VerifyWise AI governance platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "verifywise/",   # git submodule — not our code
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["verifywise_mcp"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
exclude = ["**/__pycache__"]
strict = []
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires running VerifyWise Docker stack",
    "e2e: requires running VerifyWise + browser automation",
    "slow: marks tests as slow (deselect with '-m not slow')",
]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/verifywise_mcp"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
